# nginx-log-plugin

./: Changelog.md  LICENSE  README.md  Setup.hs  cabal.project  compile_flags.stub  config  ngx-export-log.cabal  ngx_log_plugin.c  ngx_log_plugin_module_api.c
.github/workflows/: ci.yml
NgxExport/: Log.hs
NgxExport/Log/: Base.hs  CLog.hs  Gen.hs
capi/: ngx_log_plugin_capi.h
module/: config  ngx_log_plugin_module.c
simple/: Makefile  cabal.project  nginx.conf  ngx-log.cabal  ngx_log.hs
test/: nginx.conf  ngx_log.hs
test/t/: basic.t
