name:                  ngx-export-log
version:               0.3.0.0
synopsis:              Logging with native Nginx logging mechanism
description:           Logging with native Nginx logging mechanism
author:                Alexey Radkov <alexey.radkov@gmail.com>
maintainer:            Alexey Radkov <alexey.radkov@gmail.com>
category:              Network
build-type:            Simple
cabal-version:         1.20

library
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , template-haskell >= 2.11.0
                     , ngx-export >= 1.7.1
                     , ngx-export-tools >= 0.4.9.0
                     , bytestring

  exposed-modules:     NgxExport.Log
  other-modules:       NgxExport.Log.Base
                     , NgxExport.Log.Gen

  ghc-options:        -Wall

